
PROJECT(sprocket C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH 
    "${PROJECT_SOURCE_DIR}/cmake"
    "${CMAKE_MODULE_PATH}"
)
  
SET(_ECLIPSE_VERSION "3.6")
  
SET(SPROCKET_MAJOR "0")
SET(SPROCKET_MINOR "1")
SET(SPROCKET_PATCH "0")
SET(SPROCKET_VERSION "${SPROCKET_MAJOR}.${SPROCKET_MINOR}.${SPROCKET_PATCH}")
SET(CMAKE_VERSION_STRING "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}")

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()

ADD_SUBDIRECTORY(tests)

