
PROJECT(sprocket C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH 
    "${PROJECT_SOURCE_DIR}/cmake"
    "${CMAKE_MODULE_PATH}"
)
  
SET(_ECLIPSE_VERSION "3.6")
  
SET(SPROCKET_MAJOR "0")
SET(SPROCKET_MINOR "1")
SET(SPROCKET_PATCH "0")
SET(SPROCKET_VERSION "${SPROCKET_MAJOR}.${SPROCKET_MINOR}.${SPROCKET_PATCH}")
SET(CMAKE_VERSION_STRING "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}")

SET(SPROCKET_DESCRIPTION "High-Performance WebSocket transport")

OPTION(SPROCKET_TESTS "Build and run tests" ON)

FIND_PACKAGE(Git QUIET)
IF(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
	EXECUTE_PROCESS(
		COMMAND             "${GIT_EXECUTABLE}" describe --always# | sed -e "s:v::"
		WORKING_DIRECTORY   "${PROJECT_SOURCE_DIR}"
		OUTPUT_VARIABLE     SPROCKET_PACKAGE_VERSION
		OUTPUT_STRIP_TRAILING_WHITESPACE
	)
ELSEIF(EXISTS ${PROJECT_SOURCE_DIR}/.version)
	file (STRINGS .version SPROCKET_PACKAGE_VERSION)
ELSE()
	SET(SPROCKET_PACKAGE_VERSION "Unknown")
ENDIF()

FIND_PACKAGE(Threads REQUIRED QUIET)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)

IF(SPROCKET_TESTS)
	ENABLE_TESTING()
ENDIF()

ADD_SUBDIRECTORY(tests)

INSTALL(TARGETS LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
INSTALL(TARGETS ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

