
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  
SET(FIND_LIBRARY_USE_LIB64_PATHS 1)
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
	/usr/local/lib
	/usr/lib
)
  
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

SET(sprocket_server_SRCS
	main.c
)
  
ADD_EXECUTABLE(sprocket_server
    ${sprocket_server_SRCS}
)
  
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

TARGET_LINK_LIBRARIES(sprocket_server
	sprocket
)
  
#CONFIGURE_FILE (pkgconfig.in ${PROJECT_NAME}.pc @ONLY)
#INSTALL (
#    FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc
#    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
#)
#INSTALL (TARGETS ${PROJECT_NAME}
#    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
#    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#)
