
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  
SET(FIND_LIBRARY_USE_LIB64_PATHS 1)
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
	/usr/local/lib
	/usr/lib
)
  
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tcp_server)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

ADD_EXECUTABLE(epoll epoll.c)
TARGET_LINK_LIBRARIES(epoll sprocket)

ADD_EXECUTABLE(conf conf.c)
TARGET_LINK_LIBRARIES(conf sprocket)

ADD_EXECUTABLE(tcps tcps.c)
TARGET_LINK_LIBRARIES(tcps sprocket)

