
OPTION(RUN_TESTS "Build and run tests" ON)

IF(RUN_TESTS)
	FIND_PACKAGE(Check REQUIRED)
	ENABLE_TESTING()
	SET(all_tests "")
	SET(LIBS ${LIBS} ${CHECK_LIBRARIES} m rt pthread subunit)
	MACRO(ADD_SPROCKET_TEST NAME TIMEOUT)
		LIST(APPEND all_tests ${NAME})
		ADD_EXECUTABLE(${NAME} check_${NAME}.c)
		TARGET_LINK_LIBRARIES(${NAME} ${PROJECT_NAME} ${LIBS})
		ADD_TEST(NAME ${NAME} COMMAND ${NAME})
		SET_TESTS_PROPERTIES(${NAME} PROPERTIES TIMEOUT ${TIMEOUT})
	ENDMACRO(ADD_SPROCKET_TEST)

	ADD_SPROCKET_TEST(ws_ht_parser 10)
ENDIF()

