

IF(SPROCKET_TESTS)
	FIND_PACKAGE(Check REQUIRED)
	ENABLE_TESTING()
	SET(all_tests "")
	SET(LIBS ${LIBS} ${CHECK_LIBRARIES} m rt subunit)
	MACRO(ADD_SPROCKET_TEST NAME)
		LIST(APPEND all_tests ${NAME})
		ADD_EXECUTABLE(${NAME} ${NAME}.c)
		TARGET_LINK_LIBRARIES(${NAME} ${PROJECT_NAME} ${LIBS})
		ADD_TEST(NAME ${NAME} COMMAND ${NAME})
	ENDMACRO(ADD_SPROCKET_TEST)

	ADD_SPROCKET_TEST(check_ws_ht_parser)
	ADD_SPROCKET_TEST(check_hashmap)
	ADD_SPROCKET_TEST(check_llist)
	ADD_SPROCKET_TEST(check_queue)
	ADD_SPROCKET_TEST(check_buffer)
	ADD_SPROCKET_TEST(check_base64)
	ADD_SPROCKET_TEST(check_ws_magic)
	ADD_SPROCKET_TEST(check_ws_frame)
	ADD_SPROCKET_TEST(check_ws_frag)
	ADD_SPROCKET_TEST(check_ws_msg)
	ADD_SPROCKET_TEST(check_th_pool_ex)
	ADD_SPROCKET_TEST(check_listener)
	ADD_SPROCKET_TEST(check_str)
ENDIF()

